Fix long words in project description from making project cards too big

--- a/src/js/components/team-projects-view/project-card.scss
+++ b/src/js/components/team-projects-view/project-card.scss
@@ -88,6 +88,7 @@
   line-height: 24px;
   color: #4A4A4A;
   margin-top: 0px;
+  max-width: 90%;
 }
 
 .preview-icon {
